# ENHANCE

./: .gitignore
0_data/: get_isic.py
1_code/: 0_baseline.py  1_multi_task.py  README.md  flake.nix  generate_data.py  get_data.py  pyproject.toml
